force-app/main/default/objects/Field_Change_Request__c.object
<CustomObject>
    <description>Object is used to store requests to the geodesign team regarding changes to the fields that will be participating in BirdReturns program. There are often changes made based on location, water depth, bird response etc. both during bidding and during the program period, and the geodesign team needs to update the GIS maps for those bids to show the fields that will actually be used.</description>
    <fields>
        <fullName>Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bid record where this change should happen. If the contract record for this bid has already been created, please make the change to the &apos;Field(s) Selected&apos; field there.</inlineHelpText>
        <label>Bid</label>
        <referenceTo>Bid__c</referenceTo>
        <relationshipLabel>Field Change Requests</relationshipLabel>
        <relationshipName>Field_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Requested__c</fullName>
        <inlineHelpText>What is the change that you are requesting to the &apos;Field(s) Selected&apos; field and the GIS maps?</inlineHelpText>
        <label>Change Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For GIS staff only - has this change been made to the GIS Maps and has the &apos;Field(s) Selected&apos; field been updated to reflect the change?</inlineHelpText>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contract record where these requested changes should be made.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Field Change Requests</relationshipLabel>
        <relationshipName>Field_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Why are you requesting this change?</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Field Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FCR-{00000}</displayFormat>
        <label>Field Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Bid</fullName>
        <active>true</active>
        <label>Bid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <description>Request created from a contract record</description>
        <label>Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>